--- a/css/styles.css
+++ b/css/styles.css
@@ -484,11 +484,13 @@ img {
 }
 
 .footer-block {
+  position: relative;
   margin-left: auto;
   margin-right: auto;
   background: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+  width: 1600px;
 }
 .futter-container {
   display: flex;
@@ -628,7 +630,54 @@ img {
   opacity: 0;
   pointer-events: none;
 }
+.subscription {
+  position: absolute;
+  /* display: flex; */
+  right: 262px;
+  top: 74px;
+}
+.text-subscription {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.wrapper-send {
+  display: flex;
+}
+.input-subscription {
+  padding: 15px;
+  width: 358px;
+  color: #ffffff;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: inherit;
+}
+.btn-subscription {
+  width: 200px;
+  margin-left: 12px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  display: flex;
+  align-items: center;
 
+  background: #2196f3;
+  color: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 10px 28px;
+}
+.icon-send {
+  margin-left: 10px;
+  fill: #ffffff;
+}
 /* --------------PORTFOLIO --------------*/
 
 /* ----------------ФИЛЬТР------------------ */
