--- a/css/styles.css
+++ b/css/styles.css
@@ -484,7 +484,6 @@ img {
 }
 
 .footer-block {
-  position: relative;
   margin-left: auto;
   margin-right: auto;
   background: #2f303a;
@@ -631,10 +630,8 @@ img {
   pointer-events: none;
 }
 .subscription {
-  position: absolute;
-  /* display: flex; */
-  right: 262px;
-  top: 74px;
+  margin-top: 12px;
+  margin-left: 93px;
 }
 .text-subscription {
   margin-bottom: 20px;
@@ -657,6 +654,14 @@ img {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: inherit;
+}
+.input-subscription::placeholder {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 .btn-subscription {
   width: 200px;
