--- a/css/styles.css
+++ b/css/styles.css
@@ -40,9 +40,6 @@ img {
   margin: 0 auto;
 }
 
-.header-list {
-  display: flex;
-}
 .list {
   list-style: none;
 }
@@ -88,6 +85,9 @@ img {
 .header-navigation {
   display: flex;
   align-items: center;
+}
+.header-list {
+  display: flex;
 }
 .header-item:not(:last-child) {
   margin-right: 50px;
@@ -239,7 +239,79 @@ img {
   color: var(--first-title-color);
   border: none;
 }
+.backdrop {
+  position: fixed;
 
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  background: rgba(0, 0, 0, 0.2);
+  transition: opacity 500ms, visibility 500ms;
+}
+.backdrop.is-hidden .modal {
+  transform: scale(1.5) rotate(180deg) translate(-500px, 500px);
+  transition: transform 500ms;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  height: 581px;
+  padding: 40px;
+
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transform: scale(1) rotate(0) translate(-500px, 500px);
+  transform: translate(-50%, -50%);
+  transition: transform 500ms;
+}
+
+.modal-close {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  top: 8px;
+  right: 8px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal-title {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+  color: #212121;
+}
+.input-wrap {
+  position: relative;
+  margin-top: 4px;
+}
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 42px;
+}
+.input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
 /* ------------------------------ПРИЕМУЩЕСТВА-------------------- */
 
 .page-section {
@@ -585,50 +657,6 @@ img {
 .social-icon {
   fill: #ffffff;
 }
-.backdrop {
-  position: fixed;
-
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  background: rgba(0, 0, 0, 0.2);
-  transition: opacity 500ms, visibility 500ms;
-}
-.backdrop.is-hidden .modal {
-  transform: scale(1.5) rotate(180deg) translate(-500px, 500px);
-  transition: transform 500ms;
-}
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 528px;
-  height: 581px;
-
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  transform: scale(1) rotate(0) translate(-500px, 500px);
-  transform: translate(-50%, -50%);
-  transition: transform 500ms;
-}
-
-.modal-close {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  top: 8px;
-  right: 8px;
-  background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-}
-.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
 .subscription {
   margin-top: 12px;
   margin-left: 93px;
@@ -653,7 +681,8 @@ img {
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  background-color: inherit;
+  background-color: transparent;
+  outline: none;
 }
 .input-subscription::placeholder {
   font-style: normal;
@@ -663,6 +692,7 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+
 .btn-subscription {
   width: 200px;
   margin-left: 12px;
@@ -672,6 +702,7 @@ img {
   letter-spacing: 0.06em;
   display: flex;
   align-items: center;
+  outline: none;
 
   background: #2196f3;
   color: #ffffff;
