--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,16 @@ img {
 .link {
   text-decoration: none;
 }
-
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  overflow: hidden;
+}
 /* ----------------------------ЛОГОТИП-------------------- */
 .header-logo {
   margin-right: 93px;
@@ -279,6 +288,9 @@ img {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
+.modal-close:hover .modal-close-icon {
+  fill: var(--accent-color);
+}
 .is-hidden {
   visibility: hidden;
   opacity: 0;
@@ -296,21 +308,115 @@ img {
 }
 .input-wrap {
   position: relative;
-  margin-top: 4px;
+  margin-bottom: 10px;
+}
+.modal-form > label {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
 }
 .modal-form-input {
+  margin: 0;
   width: 100%;
   height: 40px;
-  margin-bottom: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 12px 42px;
+  outline: none;
+}
+.modal-form-input:focus,
+.area-text:focus {
+  border-color: #2196f3;
+}
+.modal-form-input:focus + .input-icon {
+  fill: #2196f3;
 }
 .input-icon {
   position: absolute;
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
+}
+.area-text {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  padding: 12px 16px;
+  outline: none;
+}
+
+.area-text::placeholder {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.comment-modal {
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+}
+.wrap-check {
+  margin-top: 16px;
+  margin-bottom: 34px;
+}
+.modal-check:checked + .check-text .check-item {
+  background-color: var(--accent-color);
+  border: none;
+}
+.check-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 15px;
+  border: 2px solid#212121;
+  border-radius: 2px;
+  margin-right: 8px;
+}
+.check-icom {
+  fill: #ffffff;
+}
+.check-text {
+  display: flex;
+  align-items: center;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+.link-check {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+}
+.btn-modal {
+  display: block;
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  margin: 0 auto;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  padding: 0;
 }
 /* ------------------------------ПРИЕМУЩЕСТВА-------------------- */
 
